libs/ui/KisPart.cpp
@@ -73,6 +73,8 @@
 #include "kis_action.h"
 #include "kis_action_registry.h"
 #include "KisSessionResource.h"
+#include "KisBusyWaitBroker.h"
+#include "dialogs/kis_delayed_save_dialog.h"
 
 Q_GLOBAL_STATIC(KisPart, s_instance)
 
@@ -121,6 +123,14 @@ KisPart* KisPart::instance()
     return s_instance;
 }
 
+namespace {
+void busyWaitWithFeedback(KisImageSP image)
+{
+    const int busyWaitDelay = 1000;
+    KisDelayedSaveDialog dialog(image, KisDelayedSaveDialog::ForcedDialog, busyWaitDelay, KisPart::instance()->currentMainwindow());
+    dialog.blockIfImageIsBusy();
+}
+}
 
 KisPart::KisPart()
     : d(new Private(this))
@@ -143,6 +153,7 @@ KisPart::KisPart()
 
 
     d->animationCachePopulator.slotRequestRegeneration();
+    KisBusyWaitBroker::instance()->setFeedbackCallback(&busyWaitWithFeedback);
 }
 
 KisPart::~KisPart()
